# OpenGL-Shoot-Game

./: CMakeLists.txt  Camera.h  ShaderSource.h  VertexData.h  main.cpp  shader.h
fragmentShader/: lampFrag.frag  triangleFrag.frag
src/: glad.c
vertexShader/: aimVertex.vs  lampVertex.vs  triangleVertex.vs
vertexSource/: AimData.h  RectangleData.h  lightData.h
